@@ -49,6 +49,8 @@ Bugs fixed
 * #8277: sphinx-build: missing and redundant spacing (and etc) for console
   output on building
 * #7973: imgconverter: Check availability of imagemagick many times
+* #8255: py domain: number in default argument value is changed from hexadecimal
+  to decimal
 * #8093: The highlight warning has wrong location in some builders (LaTeX,
   singlehtml and so on)
 * #8239: Failed to refer a token in productionlist if it is indented
